--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,8 +1,10 @@
 name: docs
 
-on:
-  push:
-  workflow_dispatch:
+on: [ push, workflow_dispatch ]
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   docs:
@@ -12,6 +14,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+          
+    # need python
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: pip install requests PyYAML
 
       - name: Build docs
         uses: TinyTapeout/tt-gds-action/docs@tt04
