--- a/src/pin_order.cfg
+++ b/src/pin_order.cfg
@@ -1,17 +1,14 @@
 #N
 @min_distance=0.1
-A.*
+ui_in.*
 
 #S
 @min_distance=0.1
-B.*
-$1
-rst
+rst_n
+ena
 
 #E
-Cin
 clk
 
 #W
-Sum.*
-Cout
+uo_out.*
